[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "web3"
dynamic = ["version"]
description = "Web3.py"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7.2,<3.11"
authors = [
    { name = "Piper Merriam", email = "pipermerriam@gmail.com" },
]
keywords = [
    "ethereum",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "aiohttp>=3.7.4.post0,<4",
    "eth-abi>=3.0.0,<4.0.0",
    "eth-account>=0.7.0,<0.8.0",
    "eth-hash[pycryptodome]>=0.2.0,<1.0.0",
    "eth-typing>=3.0.0,<4.0.0",
    "eth-utils>=2.0.0,<3.0.0",
    "hexbytes>=0.1.0,<1.0.0",
    "ipfshttpclient==0.8.0a2",
    "jsonschema>=4.0.0,<5",
    "lru-dict>=1.1.6,<2.0.0",
    "protobuf>=4.21.6",
    "pywin32>=223;platform_system=='Windows'",
    "requests>=2.16.0,<3.0.0",
    # remove typing_extensions after python_requires>=3.8, see web3._utils.compat
    "typing-extensions>=3.7.4.1,<5;python_version<'3.8'",
    "websockets>=10.0.0,<11",
]

[project.optional-dependencies]
dev = [
    "bumpversion",
    "build",
    "flaky>=3.7.0,<4",
    "hypothesis>=3.31.2,<6",
    "importlib-metadata<5.0;python_version<'3.8'",
    "pytest>=6.2.5,<7",
    "pytest-asyncio>=0.18.1,<0.19",
    "pytest-mock>=1.10,<2",
    "pytest-pythonpath>=0.3",
    "pytest-watch>=4.2,<5",
    "pytest-xdist>=1.29,<2",
    "setuptools>=38.6.0",
    "tox>=1.8.0",
    "tqdm>4.32,<5",
    "twine>=1.13,<2",
    "pluggy==0.13.1",
    "when-changed>=0.3.0,<0.4",
    # pip now supports self references https://github.com/pypa/pip/issues/11296
    "web3[docs,linter,tester]",
]
docs = [
    "click>=5.1",
    "configparser==3.5.0",
    "contextlib2>=0.5.4",
    "mock",
    "py-geth>=3.9.1,<4",
    "py-solc>=0.4.0",
    "pytest>=6.2.5,<7",
    "sphinx-better-theme>=0.1.4",
    "sphinx>=4.2.0,<5",
    "sphinx_rtd_theme>=0.1.9",
    "toposort>=1.4",
    "towncrier==18.5.0",
    "urllib3",
    "wheel",
]
linter = [
    "black>=22.1.0,<23.0",
    "flake8==3.8.3",
    "isort>=4.2.15,<4.3.5",
    "mypy==0.910",
    "types-protobuf==3.19.13",
    "types-requests>=2.26.1,<3",
    "types-setuptools>=57.4.4,<58",
]
tester = [
    "eth-tester[py-evm]==v0.7.0-beta.1",
    "py-geth>=3.9.1,<4",
]

[project.entry-points.pytest11]
pytest_ethereum = "web3.tools.pytest_ethereum.plugins"

[project.urls]
Homepage = "https://github.com/ethereum/web3.py"

[tool.hatch.version]
path = "web3/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ens",
    "/ethpm",
    "/web3",
    "/requirements*.txt",
]

[tool.hatch.build.targets.wheel]
include = [
    "/ens",
    "/ethpm",
    "/web3",
]
exclude = [
    "/ethpm/ethpm-spec/*",
    "/ethpm/ethpm-spec/bin",
    "/ethpm/ethpm-spec/docs",
    "/ethpm/ethpm-spec/tests",
]

[tool.towncrier]
    package="web3"
    filename = "docs/releases.rst"
    directory = "newsfragments"
    underlines = ["-", "~", "^"]
    issue_format = "`#{issue} <https://github.com/ethereum/web3.py/issues/{issue}>`__"
    title_format = "v{version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal Changes - for web3.py Contributors"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous changes"
showcontent = false

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[tool.isort]
profile="black"
